[package]
name = "byte_prefix"
version = "1.0.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/charleschege/BytePrefix"
repository = "https://github.com/charleschege/BytePrefix"
keywords = ["bytes", "conversion", "format", "utility"]
categories = [
    "accessibility",
    "data-structures",
    "encoding",
    "parsing",
    "value-formatting",
]

[badges]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
